force-app/main/default/objects/Bank_Account_Settings__c/Bank_Account_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Bank Account Settings</label>
</CustomObject>