force-app/main/default/objects/Bank_Account_Settings__c/fields/Card_Receipt_Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Card_Receipt_Bank_Account_Name__c</fullName>
    <label>Card_Receipt Bank Account Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>