force-app/main/default/objects/Bank_Account_Settings__c/fields/Worldpay_Bank_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Worldpay_Bank_Account_Id__c</fullName>
    <label>Worldpay Bank Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>